# agentkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agentkit/research-vec/research.lance/_transactions/: 0-b067c504-4498-470f-90ee-0f2f121247c4.txn  1-e2d1081f-f0bd-42ba-bf03-0fe9e04af611.txn  2-a1c20b9e-7035-4458-a99d-588716a3b066.txn  3-7795a79a-1a00-4c60-bb43-223b28e20bc1.txn  4-edef7e30-2030-4941-b822-bcfdf9c01aa9.txn
.agentkit/runs/: 0b93f955-9d5c-40b1-94bf-be29b86d37d6.events.jsonl  0b93f955-9d5c-40b1-94bf-be29b86d37d6.jsonl  2564ad87-972f-47fc-977f-131bcfe53401.events.jsonl  2564ad87-972f-47fc-977f-131bcfe53401.jsonl  7cabd711-9a9a-41e4-8b84-5fc19a366b84.events.jsonl  7cabd711-9a9a-41e4-8b84-5fc19a366b84.jsonl
.github/workflows/: ci.yml
docs/: architecture.md  marketplace.json  plugin-development.md
docs/blog/: launch.md  submissions.md  twitter-thread.md
docs/media/: README.md  demo.tape
examples/echo-agent/: README.md  agent.yaml
examples/http-plugin-demo/: pyproject.toml
examples/http-plugin-demo/src/agentkit_demo_http_tool/: __init__.py  __main__.py
examples/http-plugin-demo/src/aglet_demo_http_tool/: __init__.py  __main__.py
examples/research-agent/: README.md  agent.yaml  eval-suite.yaml
examples/subprocess-plugin-demo/: pyproject.toml
examples/subprocess-plugin-demo/src/agentkit_demo_subprocess_tool/: __init__.py  __main__.py
examples/subprocess-plugin-demo/src/aglet_demo_subprocess_tool/: __init__.py  __main__.py
examples/third-party-element-demo/: README.md  agent.yaml  pyproject.toml
examples/third-party-element-demo/src/agentkit_demo_compliance/: __init__.py
examples/third-party-element-demo/src/aglet_demo_compliance/: __init__.py
examples/third-party-intent-element/: pyproject.toml
examples/third-party-intent-element/src/my_intent_plugin/: __init__.py
examples/third-party-memory-entity/: pyproject.toml
examples/third-party-memory-entity/src/my_entity_memory/: __init__.py
scripts/: add_readmes.py  fix_classifiers_position.py  normalise_pyprojects.py
tests/conformance/: test_technique_conformance.py
tests/integration/: test_checkpoint_resume.py  test_echo_agent.py  test_eval_harness.py  test_hooks.py  test_http_plugin.py  test_memory_summary.py  test_multi_turn.py  test_reflexion.py  test_research_agent_mock.py  test_safety_constitutional.py  test_sanity_checks.py  test_server.py  test_subagent.py  test_subprocess_plugin.py  test_third_party_element.py  test_tot_planner.py  test_workflow_planner.py
tests/unit/: test_budget.py  test_config.py  test_context_patch.py  test_event_bus.py  test_hooks.py  test_marketplace_index.py  test_registry.py  test_routing.py
