[project]
name = "aglet-workspace"
version = "0.2.0"
description = "Aglet monorepo workspace root (not published)."
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/aglet",
    "packages/aglet-cli",
    "packages/aglet-server",
    "packages/aglet-eval",
    "packages/aglet-builtin/*",
    "examples/third-party-element-demo",
    "examples/subprocess-plugin-demo",
    "examples/http-plugin-demo",
]

[tool.uv.sources]
aglet = { workspace = true }
aglet-cli = { workspace = true }
aglet-server = { workspace = true }
aglet-eval = { workspace = true }
aglet-builtin-perception-passthrough = { workspace = true }
aglet-builtin-memory-sliding-window = { workspace = true }
aglet-builtin-memory-rag = { workspace = true }
aglet-builtin-planner-echo = { workspace = true }
aglet-builtin-planner-react = { workspace = true }
aglet-builtin-planner-reflexion = { workspace = true }
aglet-builtin-planner-tot = { workspace = true }
aglet-builtin-planner-workflow = { workspace = true }
aglet-builtin-tool-local-python = { workspace = true }
aglet-builtin-tool-http-openapi = { workspace = true }
aglet-builtin-tool-mcp = { workspace = true }
aglet-builtin-tool-subagent = { workspace = true }
aglet-builtin-executor-sequential = { workspace = true }
aglet-builtin-safety-budget = { workspace = true }
aglet-builtin-output-streaming-text = { workspace = true }
aglet-builtin-obs-console = { workspace = true }
aglet-builtin-obs-jsonl = { workspace = true }
aglet-builtin-obs-otel = { workspace = true }
aglet-builtin-obs-langfuse = { workspace = true }
aglet-builtin-extensibility-hooks = { workspace = true }
aglet-builtin-model-openai = { workspace = true }
aglet-builtin-model-litellm = { workspace = true }
aglet-builtin-model-mock = { workspace = true }
aglet-demo-compliance = { workspace = true }
aglet-demo-subprocess-tool = { workspace = true }
aglet-demo-http-tool = { workspace = true }

[dependency-groups]
dev = [
    "aglet",
    "aglet-cli",
    "aglet-server",
    "aglet-eval",
    "aglet-builtin-perception-passthrough",
    "aglet-builtin-memory-sliding-window",
    "aglet-builtin-memory-rag",
    "aglet-builtin-planner-echo",
    "aglet-builtin-planner-react",
    "aglet-builtin-planner-reflexion",
    "aglet-builtin-planner-tot",
    "aglet-builtin-planner-workflow",
    "aglet-builtin-tool-local-python",
    "aglet-builtin-tool-http-openapi",
    "aglet-builtin-tool-mcp",
    "aglet-builtin-tool-subagent",
    "aglet-builtin-executor-sequential",
    "aglet-builtin-safety-budget",
    "aglet-builtin-output-streaming-text",
    "aglet-builtin-obs-console",
    "aglet-builtin-obs-jsonl",
    "aglet-builtin-obs-otel",
    "aglet-builtin-extensibility-hooks",
    "aglet-builtin-model-openai",
    "aglet-builtin-model-mock",
    "aglet-demo-compliance",
    "aglet-demo-subprocess-tool",
    "aglet-demo-http-tool",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
]

# Heavyweight optional builtins (litellm, langfuse) live in their own group so the dev
# install stays light. Enable with: `uv sync --group heavy`.
heavy = [
    "aglet-builtin-model-litellm",
    "aglet-builtin-obs-langfuse",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
