[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aglet-demo-http-tool"
version = "0.1.0"
description = "Demo HTTP plugin: a Tool Technique exposed via FastAPI."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["aglet>=0.1.0", "fastapi>=0.115", "uvicorn>=0.30"]

[project.scripts]
aglet-demo-http-tool = "aglet_demo_http_tool.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aglet_demo_http_tool"]
