[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aglet-demo-subprocess-tool"
version = "0.1.0"
description = "Demo subprocess plugin: a Tool Technique that runs in its own Python process and talks JSON-RPC over stdio."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = ["aglet>=0.1.0"]

[project.scripts]
aglet-demo-subprocess-tool = "aglet_demo_subprocess_tool.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aglet_demo_subprocess_tool"]
